--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VUE_APP_APPNAME = Opti
 VUE_APP_CLIENT_ID = TestClient
 VUE_APP_CLIENT_SECRET = test_secret
 VUE_APP_BACKEND_URL = 'http://localhost'
-VITE_BACKEND_URL='https://optikasib.ru:8001/api'
+VITE_BACKEND_URL='http://optikasib.ru:8001/api'
